# digi-dash

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_esp.txt  CMakeLists_pc.txt  COPILOT_CONTEXT.md  DEBUG.md  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  TESTING_QUICKSTART.md  globals.xml  partitions.csv  project.xml  sdkconfig  sdkconfig.defaults  test-env.sh  test_pixel_values.sh  test_render.sh
assets/: dashboard_tiny.json
cmake/: Findthorvg.cmake
components/components/digi-dash-esp32/: CMakeLists.txt  digi-dash-esp32.c
components/digi_dash_core/: CMakeLists.txt  digi_dash_core.c
components/digi_dash_core/include/: digi_dash_core.h
components/digi_dash_core/test/: CMakeLists.txt  test_digi_dash_core.c
docs/: ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  COPILOT_CONTEXT.md  DEVELOPMENT.md  ESP32_OBD2_BLUETOOTH.md  ESP32_OBD2_UART.md  ESP32_TESTING.md  FIRMWARE_BUILD.md  HARDWARE_DISPLAY_SETUP.md  OBD2_BLUETOOTH_SETUP.md  OBD2_COMPLETE.md  OBD2_IMPLEMENTATION.md  OBD2_UART_SETUP.md  QEMU_SIMULATOR.md  RENDERING_VERIFICATION.md  REQUIREMENTS.md  SAFETY.md  SVG_PREPROCESSING_GUIDE.md  TESTING.md  THORVG_FILE_INDEX.md  THORVG_IMPLEMENTATION.md  THORVG_SVG_LOADER.md
docs/data_sheets/: 5793_initcode.txt
docs/data_sheets/HD40015C40-specsheet/: HD40015C40-specsheet.md  HD40015C40-specsheet_meta.json
docs/data_sheets/NV3052C/: NV3052C.md  NV3052CGRB_AN+for+Code_V0.1.md  NV3052C_meta.json
docs/data_sheets/NV3052C/NV3052C-Datasheet-V0.2/: NV3052C-Datasheet-V0.2.md  NV3052C-Datasheet-V0.2_meta.json
docs/data_sheets/NV3052CGRB_AN+for+Code_V0.1/: NV3052CGRB_AN+for+Code_V0.1.md  NV3052CGRB_AN+for+Code_V0.1_meta.json
docs/data_sheets/adafruit-qualia-esp32-s3-for-rgb666-displays/adafruit-qualia-esp32-s3-for-rgb666-displays/: adafruit-qualia-esp32-s3-for-rgb666-displays.md  adafruit-qualia-esp32-s3-for-rgb666-displays_meta.json
docs/gauge_format/: BINARY_FORMAT.md
docs/rendering_pipeline/: PIPELINE.md
engine/: CMakeLists.txt
engine/include/digidash/: animation_engine.h  binary_gauge_loader.h  color_utils.h  font_manager.h  gauge_scene.h  pid_binding_system.h  platform_bluetooth.h  platform_display.h  platform_input.h  platform_storage.h  types.h  vector_renderer.h
engine/src/: animation_engine.cpp  binary_gauge_loader.cpp  font_manager.cpp  gauge_scene.cpp  pid_binding_system.cpp  vector_renderer.cpp
firmware/: CMakeLists.txt  build_qemu_flash.py  platformio.ini  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  hardware_config.h  idf_component.yml  main.cpp
firmware/main/application/: application.cpp  application.h
firmware/main/platform/display/: display_driver.cpp  display_driver.h  nv3052c_driver.cpp  nv3052c_driver.h  nv3052c_tft_init.cpp  nv3052c_tft_init.h  pca9554_expander.cpp  pca9554_expander.h  qualia_display_config.h
firmware/main/subsystems/obd2/: obd2_uart_manager.cpp  obd2_uart_manager.h
firmware/main/subsystems/rendering/: render_engine.cpp  render_engine.h  text_renderer.cpp  text_renderer.h  tile_height_renderer.cpp  tile_height_renderer.h  tile_renderer.h
firmware/main/subsystems/storage/: storage_manager.cpp  storage_manager.h
firmware/src/: main.cpp
gauges/: README.md
idf_project/: CMakeLists.txt  partitions.csv  sdkconfig
idf_project/main/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  dashboard_svg.c  dashboard_svg.h  dashboard_svg_data.inc  idf_component.yml  lv_fs_spiffs.c  main.c
scripts/: build_firmware.sh  build_fw.sh  build_pc_simulator.sh  build_preprocessor.sh  build_qemu_firmware.sh  build_qualia_firmware.sh  build_sim.sh  flash_fw.sh  flash_gauge_to_device.sh  format_code.sh  idf_build.sh  install_deps.sh  rebuild_gauge_and_run_qemu.sh  run_gauge.sh  run_pc_simulator.sh  run_preprocessor.sh  run_qemu_firmware.sh  run_qualia_firmware.sh  run_unit_tests.sh
simulator/: CMakeLists.txt  README.md  dashboard.json  display.json  lv_conf.h
simulator/build_test/: CTestTestfile.cmake  DartConfiguration.tcl  unit_tests_include-b12d07c.cmake  unit_tests_tests-b12d07c.cmake
simulator/include/: config.h  dashboard.h  dashboard_screen.h  data_source.h  fake_pid_provider.h  gauge.h  gauge_factory.h  gauge_window.h  mock_data.h  obd2_data_source.h  rpm_gauge.h  screen_manager.h  sdl_display.h  sdl_input.h  speed_display.h  temp_gauge.h  window_manager.h
simulator/src/: config.cpp  dashboard.cpp  dashboard_screen.cpp  fake_pid_provider.cpp  gauge.cpp  gauge_factory.cpp  gauge_window.cpp  main.cpp  mock_data.cpp  obd2_data_source.cpp  rpm_gauge.cpp  screen_manager.cpp  sdl_display.cpp  sdl_input.cpp  speed_display.cpp  temp_gauge.cpp  tvg_probe.cpp  window_manager.cpp
simulator/test/: CMakeLists.txt  engine_stubs.cpp  gauge_scene_stub.cpp  test_binary_gauge_loader.cpp  test_color_utils.cpp  test_display_driver.cpp  test_dummy.cpp  test_pid_binding_system.cpp  test_tile_height_renderer.cpp
simulator/test/esp_stubs/: esp_heap_caps.h  esp_lcd_panel_ops.h  esp_lcd_qemu_rgb.h  esp_log.h  esp_stubs.cpp  esp_stubs.h
simulator/test/esp_stubs/soc/: soc.h  syscon_reg.h
simulator/tests/: Makefile
test_app/: CMakeLists.txt  README.md  sdkconfig.defaults
test_app/main/: CMakeLists.txt  test_main.c
tests/: CMakeLists.txt  test_config.cpp  test_gauge.cpp  test_mock_data.cpp  test_protocol.cpp  test_units.cpp
tools/svg_preprocessor/: CMakeLists.txt  example_svg_loader.cpp
tools/svg_preprocessor/include/: svg_preprocessor.hpp  types.hpp
tools/svg_preprocessor/src/: gauge_serializer.cpp  main.cpp  path_flattener.cpp  svg_loader.cpp  svg_normalizer.cpp
ui/: screen_main.xml
